--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ input:hover{
 	width: 400px;
 	background: white;
 	text-align: left;
-	margin-top: 600px;
+	margin-top: 50px;
 	height: 50px;
 	font-size: 40px;
 	font-family: 'Lato', sans-serif;
@@ -101,9 +101,20 @@ input:hover{
 
 }
 #leftone{
-	margin-top: 570px;
-	margin-right:600px;
+	
+	position:relative;
 }
+
 #rightone{
-	margin-right:60px
+	
+	position:relative;
+}
+#click{
+	position:relative;
+
+	
+}
+#try1 {
+	margin-right: 1565px;
+	margin-top: 650px;
 }
