--- a/main.css
+++ b/main.css
@@ -118,3 +118,9 @@ input:hover{
 	margin-right: 1565px;
 	margin-top: 650px;
 }
+#containerTwo{
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 0 auto;
+	display: inline-block;
+}
